--- a/miniprogram/pages/index/index.scss
+++ b/miniprogram/pages/index/index.scss
@@ -3,4 +3,118 @@ page {
   height: 100vh;
   display: flex;
   flex-direction: column;
+
+  .half-box {
+    height: 220px;
+    background-color: #d2dde8;
+
+    .menus-isolation {
+      padding: 0 15px;
+
+      .menus-box {
+        border-radius: 10px;
+        width: 100%;
+        height: 90px;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        overflow: hidden;
+
+        .menus-item {
+          width: 80px;
+          height: 100%;
+          background-color: white;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          font-size: 14px;
+          padding: 0 15px;
+
+          image {
+            width: 30px;
+            height: 30px;
+          }
+        }
+      }
+    }
+
+    .Bulletin {
+      width: 100%;
+      height: 50%;
+      background-color: white;
+      padding-top: 50px;
+      top: 190px;
+      position: absolute;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+
+      .Banner {
+        width: 100%;
+        height: 120px;
+        margin-top: 15px;
+        border-radius: 10px;
+        position: absolute;
+        top: -100px;
+        display: flex;
+        justify-content: center;
+
+        image {
+          width: 90%;
+          height: 100%;
+          border-radius: 10px;
+        }
+      }
+    }
+
+    .Community {
+      display: flex;
+      align-items: center;
+      padding: 0 15px;
+
+      image {
+        width: 30px;
+        height: 25px;
+        padding-right: 10px;
+      }
+
+      text {
+        font-weight: bold;
+        font-size: 20px;
+
+        text {
+          color: #e2973e;
+        }
+      }
+    }
+
+    .CommunityItem {
+      width: 100%;
+      height: 200px;
+      padding: 15px 15px 0 15px;
+      box-sizing: border-box;
+      background-color: white;
+
+      .Title {
+        font-size: 18px;
+        margin-bottom: 15px;
+      }
+
+      .Content {
+        margin-bottom: 15px;
+        color: #686868;
+        font-size: 15px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+      }
+
+      .CreatedTime {
+        color: #BDBDBD;
+        font-size: 14px;
+      }
+    }
+  }
 }
