--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,39 @@
 <!--index.wxml-->
-<van-button type="primary">八嘎</van-button>
-<view wx:for="{{announcement}}" wx:key="index">
-  <view>{{item.content}}</view>
+<view class="half-box">
+  <!-- Menus -->
+  <view class="menus-isolation">
+    <view class="menus-box">
+      <view class="menus-item">
+        <image src="../../assets/MyHouse.png" />
+        <text>我的房屋</text>
+      </view>
+      <view class="menus-item">
+        <image src="../../assets/OnlineRepair.png" />
+        <text>在线报修</text>
+      </view>
+      <view class="menus-item">
+        <image src="../../assets/VisitorInvite.png" />
+        <text>访客邀请</text>
+      </view>
+    </view>
+  </view>
+  <!-- CommunityBulletin -->
+  <view class="Bulletin">
+    <!-- Banner -->
+    <view class="Banner">
+      <image src="../../assets/Banner.png" />
+    </view>
+    <!-- CommunityBulletin -->
+    <view class="Community">
+      <image src="../../assets/Bulletin.png" />
+      <text>社区<text>公告</text></text>
+    </view>
+    <view class="CommunityItem">
+      <view class="Title">中秋、国庆温馨提示</view>
+      <view class="Content">
+        尊敬的业主（住户）:您好！值此“中秋、国庆”双节来临之际，***物业全体员工向您致以节日问候，预祝大家节日快乐！工作顺利！！阖家幸福！！！与此同时，为营造节日期间优美、整洁、舒适、安全的社区环境，**
+      </view>
+      <view class="CreatedTime">2022-09-29 14:16:57</view>
+    </view>
+  </view>
 </view>
