--- a/miniprogram/pages/index/index.scss
+++ b/miniprogram/pages/index/index.scss
@@ -89,31 +89,33 @@ page {
       }
     }
 
-    .CommunityItem {
-      width: 100%;
-      height: 200px;
-      padding: 15px 15px 0 15px;
-      box-sizing: border-box;
-      background-color: white;
+    .CommunityArticle {
+      .CommunityItem {
+        width: 100%;
+        height: 160px;
+        padding: 15px 15px 0 15px;
+        box-sizing: border-box;
+        background-color: white;
 
-      .Title {
-        font-size: 18px;
-        margin-bottom: 15px;
-      }
+        .Title {
+          font-size: 18px;
+          margin-bottom: 15px;
+        }
 
-      .Content {
-        margin-bottom: 15px;
-        color: #686868;
-        font-size: 15px;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
-      }
+        .Content {
+          margin-bottom: 15px;
+          color: #686868;
+          font-size: 15px;
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 3;
+        }
 
-      .CreatedTime {
-        color: #BDBDBD;
-        font-size: 14px;
+        .CreatedTime {
+          color: #BDBDBD;
+          font-size: 14px;
+        }
       }
     }
   }
