--- a/miniprogram/pages/mine/index.scss
+++ b/miniprogram/pages/mine/index.scss
@@ -1,1 +1,77 @@
 /* pages/mine/index.wxss */
+.mine-head {
+  width: 100%;
+  height: 200px;
+  background-color: #6394c0;
+  border-bottom-left-radius: 60rpx;
+  border-bottom-right-radius: 60rpx;
+
+  .mine-head-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 80rpx 30rpx 0 30rpx;
+
+    .Item-left {
+      display: flex;
+      align-items: center;
+
+      image {
+        width: 110rpx;
+        height: 110rpx;
+        border-radius: 100rpx;
+      }
+
+      text {
+        color: white;
+        padding-left: 20rpx;
+        font-size: 35rpx;
+      }
+    }
+
+    .Item-right {
+      color: white;
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
+.mine-bottom {
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  top: 255rpx;
+  display: flex;
+  justify-content: center;
+
+  .mine-bottom-item {
+    width: 90%;
+    background-color: white;
+    border-top-left-radius: 30rpx;
+    border-top-right-radius: 30rpx;
+    padding: 40rpx 30rpx 20rpx 30rpx;
+    box-sizing: border-box;
+
+    .bottom-Item {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding-bottom: 80rpx;
+
+      .Item-left {
+        display: flex;
+        align-items: center;
+
+        image {
+          width: 20px;
+          height: 20px;
+        }
+
+        text {
+          padding-left: 10rpx;
+        }
+      }
+    }
+  }
+}
