--- a/miniprogram/pages/mine/index.wxml
+++ b/miniprogram/pages/mine/index.wxml
@@ -6,7 +6,7 @@
       <image src="../../assets/MyHouse.png" />
       <text>浪浪山</text>
     </view>
-    <view class="Item-right">
+    <view class="Item-right" data-url="perfect" bind:tap="JumpPage">
       <text>去完善信息</text>
       <van-icon name="arrow" />
     </view>
@@ -16,10 +16,28 @@
 <!-- JumpList -->
 <view class="mine-bottom">
   <view class="mine-bottom-item">
-    <view class="bottom-Item" wx:for="{{3}}">
+    <view class="bottom-Item">
       <view class="Item-left">
-        <image src="../../assets/MyHouse.png" />
+        <image src="../../assets/house.png" />
         <text>我的房屋</text>
+      </view>
+      <view class="Item-right">
+        <van-icon name="arrow" color="#ccc" />
+      </view>
+    </view>
+    <view class="bottom-Item">
+      <view class="Item-left">
+        <image src="../../assets/repair.png" />
+        <text>我的报修</text>
+      </view>
+      <view class="Item-right">
+        <van-icon name="arrow" color="#ccc" />
+      </view>
+    </view>
+    <view class="bottom-Item">
+      <view class="Item-left">
+        <image src="../../assets/visitor.png" />
+        <text>访客记录</text>
       </view>
       <view class="Item-right">
         <van-icon name="arrow" color="#ccc" />
