--- a/miniprogram/pages/perfect/perfect.wxml
+++ b/miniprogram/pages/perfect/perfect.wxml
@@ -3,14 +3,14 @@
   <view class="ncname">
     <view>头像</view>
     <view>
-      <button class='avatar' type="default" open-type="chooseAvatar" bindchooseavatar="onChooseAvatar">
-        <image src="../../assets/MyHouse.png" />
+      <button class='avatar' type="default" bind:tap="onChooseavatar">
+        <image src="{{avatar}}" />
       </button>
       <van-icon name="arrow" />
     </view>
   </view>
   <view class="ncname">
     <view>昵称</view>
-    <input class='nickNameInput' type="nickname" value="12121" bindblur="getNickName" />
+    <input class='nickNameInput' type="nickname" value="{{nickName}}" bindblur="getNickName" bindinput="handleNickName" />
   </view>
 </view>
