'style:修正访客邀请页面布局'

--- a/miniprogram/pages/Visitor/index.scss
+++ b/miniprogram/pages/Visitor/index.scss
@@ -47,4 +47,22 @@ page {
       }
     }
   }
+
+  .confirm {
+    width: 100vw;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+
+    .Icon {
+      color: rgb(123, 150, 175);
+      font-size: 30px;
+      padding-bottom: 10px;
+    }
+  }
 }
