--- a/miniprogram/pages/Visitor/index.wxml
+++ b/miniprogram/pages/Visitor/index.wxml
@@ -1,42 +1,42 @@
 <!--pages/Visitor/index.wxml-->
 <text class="HouseInfo">房屋信息</text>
 <view class="Select" bind:tap="onSelect">
-  <view>请选择房屋信息</view>
-  <van-icon name="arrow"></van-icon>
+  <view style="color: black;" wx:if="{{SelectedHouse!==''}}">{{SelectedHouse}}</view>
+  <view wx:else>请选择房屋信息</view>
+  <van-icon name="arrow" />
 </view>
 <text class="VisitorInfo">访客信息</text>
 <view class="VisitorForm">
   <view class="grap">
     <view>姓名</view>
-    <input type="text" placeholder="请输入访客真是姓名" />
+    <input type="text" value="{{visitorName}}" placeholder="请输入访客真实姓名" bindinput="NameChange" />
   </view>
   <view class="grap">
     <view>性别</view>
     <van-radio-group value="{{ radio }}" bind:change="onChange" direction="horizontal">
       <van-radio name="1">男</van-radio>
-      <van-radio name="2">女</van-radio>
+      <van-radio name="0">女</van-radio>
     </van-radio-group>
   </view>
   <view class="grap">
     <view>手机号</view>
-    <input type="text" placeholder="请输入访客电话号码" />
+    <input type="text" value="{{mobile}}" bindinput="MobileChange" placeholder="请输入访客电话号码" />
   </view>
   <view class="grap" bind:tap="showPopup">
     <view>访问日期</view>
-    <view class="pr">请选择预约日期</view>
+    <view class="pr" wx:if="{{currentDate===''}}">{{yubase}}</view>
+    <view class="pr" style="color: black;" wx:if="{{currentDate!==''}}">{{currentDate}}</view>
     <van-icon name="arrow" />
   </view>
 
-  <view class="confirm">
-    <van-icon name="passed"  class="Icon"/>
+  <view class="confirm" bind:tap="FetchAddVisitor">
+    <van-icon name="passed" class="Icon" />
     <view>确认</view>
   </view>
 </view>
 <!-- sheet -->
-<van-action-sheet show="{{ show }}" actions="{{ actions }}" bind:close="onClose" bind:select="onSelect" />
+<van-action-sheet show="{{ show }}" actions="{{ actions }}" bind:close="onClose" bind:select="onSelect" description="选择报修房屋" cancel-text="取消" bind:cancel="onClose" />
 <!-- popup -->
 <van-popup show="{{ popupShow }}" round position="bottom" custom-style="height: 50%;" bind:close="ClosePopup">
-  骗你的，其实那年我没去职高，我去的是伯克利;
-  骗你的，其实那年我没去职高，我去的是伯克利;
-  骗你的，其实那年我没去职高，我去的是伯克利;
+  <van-datetime-picker type="date" bind:confirm="ConfirmPicker" value="{{ currentDate }}" min-date="{{maxDate}}" max-date="{{minDate}}" />
 </van-popup>
