'feat:完成选择社区页面布局'

--- a/miniprogram/pages/House/index.wxml
+++ b/miniprogram/pages/House/index.wxml
@@ -21,8 +21,8 @@
       <text class="name">{{item.name}}</text>
     </view>
   </view>
-  <view class="AddHouse">
+  <navigator url="/pages/NewCommunity/index" class="AddHouse">
     <van-icon name="plus" class="plusIcon" />
     <view>添加新房屋</view>
-  </view>
+  </navigator>
 </view>
