--- a/miniprogram/pages/mine/index.wxml
+++ b/miniprogram/pages/mine/index.wxml
@@ -16,7 +16,7 @@
 <!-- JumpList -->
 <view class="mine-bottom">
   <view class="mine-bottom-item">
-    <view class="bottom-Item">
+    <view class="bottom-Item" bind:tap="GoPage" data-bt="MyHouse">
       <view class="Item-left">
         <image src="../../assets/house.png" />
         <text>我的房屋</text>
@@ -25,7 +25,7 @@
         <van-icon name="arrow" color="#ccc" />
       </view>
     </view>
-    <view class="bottom-Item">
+    <view class="bottom-Item" bind:tap="GoPage" data-bt="repair">
       <view class="Item-left">
         <image src="../../assets/repair.png" />
         <text>我的报修</text>
