--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -7,7 +7,7 @@
         <image src="../../assets/MyHouse.png" />
         <text>我的房屋</text>
       </view>
-      <view class="menus-item">
+      <view class="menus-item" bind:tap="JumpPage" data-name="repair">
         <image src="../../assets/OnlineRepair.png" />
         <text>在线报修</text>
       </view>
